[workspace]
resolver = "2"
members = [
    "soroban-orchestra",
    "soroban-orchestra-core",
    "soroban-orchestra-fixtures",
    "soroban-orchestra-proptest",
    "soroban-orchestra-macros",
    "soroban-orchestra-report",
    "soroban-orchestra-cli",
]

[workspace.dependencies]
# Stellar
soroban-sdk    = { version = "^22.0", features = ["testutils"] }
stellar-xdr    = "^22.0"

# Core utilities
thiserror  = "^2.0"
serde      = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
petgraph   = "^0.6"
indexmap   = "^2.0"
once_cell  = "^1.19"

# Fixtures
rust_decimal = "^1.33"
num-traits   = "^0.2"

# Property testing
proptest               = "^1.4"
proptest-state-machine = "^0.3"
quickcheck             = { version = "^1.0" }
arbitrary              = { version = "^1.3", features = ["derive"] }
rand                   = "^0.8"
rand_chacha            = "^0.3"

# Macros
proc-macro2 = "^1.0"
quote       = "^1.0"
syn         = { version = "^2.0", features = ["full", "extra-traits"] }
darling     = "^0.20"

# Reporting
askama     = "^0.12"
dot_writer = "^0.1"
chrono     = { version = "^0.4", features = ["serde"] }

# CLI
clap   = { version = "^4.0", features = ["derive"] }
anyhow = "^1.0"

# Dev / test
trybuild = { version = "^1.0" }
insta    = { version = "^1.0", features = ["json"] }
