[package]
name = "soroban-orchestra"
version = "0.1.0"
edition = "2021"
description = "High-level multi-contract test harness for Soroban"

[dependencies]
soroban-orchestra-core = { path = "../soroban-orchestra-core" }
soroban-orchestra-fixtures = { path = "../soroban-orchestra-fixtures" }
soroban-orchestra-proptest = { path = "../soroban-orchestra-proptest", optional = true }
soroban-orchestra-macros = { path = "../soroban-orchestra-macros", optional = true }
soroban-orchestra-report = { path = "../soroban-orchestra-report", optional = true }

[features]
default = []
full = ["proptest", "macros", "report"]
proptest = ["dep:soroban-orchestra-proptest"]
macros = ["dep:soroban-orchestra-macros"]
report = ["dep:soroban-orchestra-report"]
