[package]
name = "soroban-band-report"
version = "0.1.0"
edition = "2021"
description = "Coverage and reporting for Soroban band"

[dependencies]
soroban-band-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
askama.workspace = true
dot_writer.workspace = true
chrono.workspace = true
